# qllm

./: .gitignore  README.md  local.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/genaitools/qllm/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/genaitools/qllm/: MainActivity.kt
app/src/main/java/com/genaitools/qllm/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/genaitools/qllm/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
llm/: pyproject.toml
llm/llm/: main.py
llm/llm/utils/: evalutate.py  save_model.py
