[project]
name = "llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.3.2",
    "torch>=2.6.0",
    "transformers>=4.49.0",
]

[project.scripts]
main = "llm.main:main"
quantize = "llm:quantize"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm"]
